# variance-wmc

./: CMakeLists.txt  README.md
src/: common.hpp  enc2lmap.cpp  main.cpp  sdd.cpp  sdd.hpp  variancecalc.cpp  variancecalc.hpp  vtree.cpp  vtree.hpp
